rules/ensure_network_policy_configured_in_labels/test/failed_pod_cilium_match_expressions_selective/input/cilium_network_policy.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: selective
  namespace: default
spec:
  endpointSelector:
    matchLabels: {}
    matchExpressions:
      - key: role
        operator: In
        values:
          - frontend
  ingress:
    - fromEndpoints:
        - {}
  egress:
    - toEndpoints:
        - {}
